@@ -77,13 +77,14 @@ $m->comp(
    key => 'description',
 &>
 <& '/widgets/select_object/select_object.mc',
-  object   => 'source',
-  name     => "$widget|source__id",
-  field    => 'source_name',
-  selected => $media->get_source__id,
-  indent   => 0,
-  useTable => 1,
-  disp     => "Source"
+  object     => 'source',
+  name       => "$widget|source__id",
+  field      => 'source_name',
+  sort_field => 'source_name',
+  selected   => $media->get_source__id,
+  indent     => 0,
+  useTable   => 1,
+  disp       => "Source"
 &>
 
 % unless (ENABLE_CATEGORY_BROWSER) {
