@@ -88,6 +88,7 @@ $m->comp(
   object   => 'source',
   name     => "$widget|source__id",
   field    => 'source_name',
+  sort_field => 'source_name',
   selected => $story->get_source__id,
   indent   => 0,
   useTable => 1,
